src/test/ui/parser/mod_file_not_exist.stderr
error[E0583]: file not found for module `not_a_real_file`
  --> $DIR/mod_file_not_exist.rs:3:1
   |
LL | mod not_a_real_file;
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `not_a_real_file` here, create file "$DIR/not_a_real_file.rs"
   = help: if there is `mod not_a_real_file` elsewhere in the crate already, import it with `use crate::` instead

error[E0433]: failed to resolve: use of undeclared type or module `mod_file_aux`
  --> $DIR/mod_file_not_exist.rs:8:16
   |
LL |     assert_eq!(mod_file_aux::bar(), 10);
   |                ^^^^^^^^^^^^ use of undeclared type or module `mod_file_aux`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0433, E0583.
For more information about an error, try `rustc --explain E0433`.
